<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.StringActivity">

    <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRandomize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/ButtonRandomize"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/button_main_randomize"/>

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/buttonRandomize" android:layout_marginBottom="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:id="@+id/cardViewList">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:focusableInTouchMode="true">

                    <TextView
                            android:text="@string/text_string_how_many"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textViewList"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="8dp"/>

                    <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:ems="10"
                            android:id="@+id/editTextTotal"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/textViewList"
                            android:layout_marginEnd="8dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:textAlignment="center"
                            android:layout_marginBottom="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:background="@android:color/transparent"
                            android:text="@string/placeholder_main_how_many"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/cardViewList"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:id="@+id/cardViewLong">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:focusableInTouchMode="true">

                    <TextView
                            android:text="@string/text_string_how_long"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textViewLong"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="8dp"/>

                    <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:ems="10"
                            android:id="@+id/editTextLong"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/textViewLong"
                            android:layout_marginEnd="8dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:textAlignment="center"
                            android:layout_marginBottom="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:background="@android:color/transparent"
                            android:text="@string/placeholder_main_how_many"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/cardViewCheckBox"
                    app:layout_constraintTop_toBottomOf="@+id/cardViewLong"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <TextView
                            android:text="@string/text_string_character"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textViewCheckBox"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="8dp"/>

                    <CheckBox
                            android:text="@string/text_string_numeric"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkBoxNumeric"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/textViewCheckBox"
                            android:layout_marginTop="8dp"/>

                    <CheckBox
                            android:text="@string/text_string_uppercase"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkBoxUppercase"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/checkBoxNumeric"/>

                    <CheckBox
                            android:text="@string/text_string_lowercase"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkBoxLowercase"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/checkBoxUppercase"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginBottom="8dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/cardViewCheckBox"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:id="@+id/cardViewResult" android:visibility="gone">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatButton
                            android:text="@string/button_main_copy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/buttonCopy"
                            android:layout_marginTop="2dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="2dp"
                            android:textAllCaps="false"
                            style="@style/Widget.AppCompat.Button.Borderless"/>

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/textViewResult"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/buttonCopy"
                            android:layout_marginTop="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginBottom="8dp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>